# dioxus_starter

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  changelog.txt  package-lock.json  package.json  tailwind.css
.github/: template.yml
assets/: tailwind.css
assets/style/: app.css
assets/style/components/: material-spinner.css  window.css
src/: lib.rs  main.rs
src/app/: app.rs  mod.rs  router.rs
src/app/components/: checkbox.rs  material_spinner.rs  mod.rs  window_content.rs
src/app/components/titlebar/: control_box.rs  control_button.rs  icons.rs  mod.rs  title_bar.rs
src/app/views/: about.rs  home.rs  mod.rs  navbar.rs
src/localization/: ar.rs  en.rs  mod.rs
src/models/: theme.rs
src/state/: app_state.rs
src/utils/: appname_utils.rs  macros.rs  mod.rs
