[package]
name = "dioxus-starter"
version = "0.1.0"
authors = ["Safwan Abdulghani <safwa1.dev@gmail.com>"]
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["router", "desktop"] }
dioxus-desktop = "0.6.3"
tokio = { version = "1.0", features = ["full"] }
winapi = { version = "0.3", features = ["winbase", "processthreadsapi", "securitybaseapi", "handleapi"] }
phf = { version = "0.11", features = ["macros"] }
thiserror = "2.0.12"

[target.'cfg(windows)'.build-dependencies]
winresource = { version = "0.1.17", default-features = false }

[features]
default = ["desktop"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

